tests/machine/x/cpp/list_set_ops.mochi.error
line 9: ../../../tests/machine/x/cpp/list_set_ops.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:9:215: error: expected ‘)’ before ‘union’
    9 |         ([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })((vector<int>{1, 2} union vector<int>{2, 3}));
      |                                                                                                                                                                                                     ~                 ^~~~~~
      |                                                                                                                                                                                                                       )
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:9:240: error: expected ‘;’ before ‘)’ token
    9 |         ([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })((vector<int>{1, 2} union vector<int>{2, 3}));
      |                                                                                                                                                                                                                                                ^
      |                                                                                                                                                                                                                                                ;
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:10:218: error: expected ‘)’ before ‘except’
   10 |         ([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })((vector<int>{1, 2, 3} except vector<int>{2}));
      |                                                                                                                                                                                                     ~                    ^~~~~~~
      |                                                                                                                                                                                                                          )
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:10:241: error: expected ‘;’ before ‘)’ token
   10 |         ([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })((vector<int>{1, 2, 3} except vector<int>{2}));
      |                                                                                                                                                                                                                                                 ^
      |                                                                                                                                                                                                                                                 ;
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:11:218: error: expected ‘)’ before ‘intersect’
   11 |         ([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })((vector<int>{1, 2, 3} intersect vector<int>{2, 4}));
      |                                                                                                                                                                                                     ~                    ^~~~~~~~~~
      |                                                                                                                                                                                                                          )
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:11:247: error: expected ‘;’ before ‘)’ token
   11 |         ([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })((vector<int>{1, 2, 3} intersect vector<int>{2, 4}));
      |                                                                                                                                                                                                                                                       ^
      |                                                                                                                                                                                                                                                       ;
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:12:221: error: expected ‘)’ before ‘union’
   12 |         ([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })(((int)(vector<int>{1, 2} union vector<int>{2, 3}).size()));
      |                                                                                                                                                                                                           ~                 ^~~~~~
      |                                                                                                                                                                                                                             )
../../../tests/machine/x/cpp/list_set_ops.mochi.cpp:12:198: error: invalid cast from type ‘std::vector<int>’ to type ‘int’
   12 |         ([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })(((int)(vector<int>{1, 2} union vector<int>{2, 3}).size()));
      |                                                                                                                                                                                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~

  8 | int main() {
  9 | 	([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })((vector<int>{1, 2} union vector<int>{2, 3}));
 10 | 	([&](const auto& __v){ if constexpr(has_size<decay_t<decltype(__v)>>::value){ for(size_t i=0;i<__v.size();++i){ if(i) cout<<' '; cout<<__v[i]; } cout<<endl; } else { cout<<__v<<endl; } })((vector<int>{1, 2, 3} except vector<int>{2}));
